; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pnp/extr_card.c_pnp_remove_card_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pnp/extr_card.c_pnp_remove_card_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pnp_dev = type { i32, i32* }

@pnp_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pnp_remove_card_device(%struct.pnp_dev* %0) #0 {
  %2 = alloca %struct.pnp_dev*, align 8
  store %struct.pnp_dev* %0, %struct.pnp_dev** %2, align 8
  %3 = call i32 @spin_lock(i32* @pnp_lock)
  %4 = load %struct.pnp_dev*, %struct.pnp_dev** %2, align 8
  %5 = getelementptr inbounds %struct.pnp_dev, %struct.pnp_dev* %4, i32 0, i32 1
  store i32* null, i32** %5, align 8
  %6 = load %struct.pnp_dev*, %struct.pnp_dev** %2, align 8
  %7 = getelementptr inbounds %struct.pnp_dev, %struct.pnp_dev* %6, i32 0, i32 0
  %8 = call i32 @list_del(i32* %7)
  %9 = call i32 @spin_unlock(i32* @pnp_lock)
  %10 = load %struct.pnp_dev*, %struct.pnp_dev** %2, align 8
  %11 = call i32 @__pnp_remove_device(%struct.pnp_dev* %10)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @__pnp_remove_device(%struct.pnp_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
